@@ -5,6 +5,9 @@ as it is included in Scrooge's user's guide.
 4.x
 -----
 
+- scrooge-core: `c.t.scrooge.TReusableMemoryTransport` now uses TUnboundedByteArrayOutputStream
+  instead of TByteArrayOutputStream to avoid buffer reallocation on reset.
+
 4.8.0
 ------
 
@@ -19,7 +22,6 @@ Breaking API Changes
 * Builds are now only for Java 8 and Scala 2.11. See the
   `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
   for details. ``RB_ID=828898``
-
 
 ~~~~~
 
